src/test/deca/syntax/invalid/decaObjet/multi_line_comment/09_trop_comment.deca
// Description:
//    tests de programme incorrect lexicalement : 
//    il des /* */ en trop pour le multi lignes commentaire
//
// Resultats:
//    09_plus_slash_fin.deca:11:13:
//
// Historique:
//    cree le 14/06/2022
{
    /* /* */ */ 

     /* aa /* aa // aa */  aa */ 
}